--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "url": "https://www.saaskunstudios.com"
   },
   "dependencies": {
-    "com.saaskunstudios.threaddispatcher": "1.0.0"
+    "com.saaskunstudios.threaddispatcher": "https://github.com/SaaskunDevs/com.saaskunstudios.threaddispatcher.git#1.0.0"
   }
 }
