--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.saaskunstudios.localconection",
+  "name": "com.saaskun.localconection",
   "version": "1.0.0",
   "displayName": "Local Conections",
   "description": "Mandar datos por red local",
